@@ -1,6 +1,7 @@
 
                               KijiREST Release Notes
 Version 1.2.0
+  * REST-41. Supports optional cross-origin resource sharing (CORS).
   * REST-89. Refresh instances automatically. Removes instance visibility
       configuration parameter. All instances on target cluster are visible.
       Manual refreshes can be triggered with a POST to the admin task
